# CSVLib

./: CMakeLists.txt  CSVReader.cpp  CsvTable.h  Functor.cpp  Functor.h  Makefile  MasterRecordNotDefined.h  MasterRecordRedefenition.h  NoSuchColumn.h  Query.cpp  Query.h  README.md  Record.cpp  Record.h  ResultSet.cpp  ResultSet.h  SCValizable.h  Table.cpp  Table.h  draft.txt  newFile  reader  test.csv  test2.csv
table/: CMakeLists.txt  CsvTable.cpp  CsvTable.h  Query.cpp  Query.h  Record.h  ResultSet.h
table/exceptions/: MasterRecordRedefenition.h  NoSuchColumn.h
test_impl/: UserImplementationTets.cpp  UserImplementationTets.h
